--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Assets Reporting and Maintenance for Telecom</title>
+  <title>System for Maintenance and Reporting of Telecom Assets(SMART)</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,9 +23,9 @@
     </nav>
   </header>
   <main class="landing-page">
-    <h1>Welcome to the Assets Reporting and Maintenance for Telecom</h1>
+    <h1>Welcome to the System for Maintenance and Reporting of Telecom Assets(SMART) </h1>
     <p>Explore our services in connectivity, innovation, and global communication.</p>
-    <p>armtele.io is a comprehensive platform designed to streamline the management of telecom assets through efficient reporting and maintenance tools. It empowers telecom organizations to track, analyze, and maintain their assets with ease. By simplifying asset management, armtele.io boosts operational efficiency.</p>
+    <p>pabrmt.github.io is a comprehensive platform designed to streamline the management of telecom assets through efficient reporting and maintenance tools. It empowers telecom organizations to track, analyze, and maintain their assets with ease. By simplifying asset management, armtele.io boosts operational efficiency.</p>
   </main>
 </body>
 </html>
