Update Cable Joint Locations.html

--- a/Cable Joint Locations.html
+++ b/Cable Joint Locations.html
@@ -25,7 +25,8 @@
   <main>
     <h1>Cable Joint Locations</h1>
     <p>Submit details about cable joint locations using the form below:</p>
-    <iframe src="https://docs.google.com/forms/d/e/EXAMPLE_FORM_ID/viewform?embedded=true" width="640" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    <!-- Google Form Embed -->
+    <iframe src="https://forms.gle/2EsMv7P3nVgxZBrH7" width="640" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
   </main>
 </body>
 </html>
